crates/solidity-v2/testing/snapshots/cst_output/MappingType/named_value/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.18'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/MappingType/named_value/input.sol:3:27]
   │
 3 │ mapping(string => bytes32 Bar)
   │                           ─┬─  
   │                            ╰─── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 0..8,
                    },
                    name: Identifier {
                        range: 9..10,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [],
                    },
                    open_brace: OpenBrace {
                        range: 11..12,
                    },
                    members: ContractMembers {
                        elements: [
                            StateVariableDefinition(
                                StateVariableDefinitionStruct {
                                    type_name: MappingType(
                                        MappingTypeStruct {
                                            mapping_keyword: MappingKeyword {
                                                range: 111..118,
                                            },
                                            open_paren: OpenParen {
                                                range: 118..119,
                                            },
                                            key_type: MappingKeyStruct {
                                                key_type: ElementaryType(
                                                    StringKeyword(
                                                        StringKeyword {
                                                            range: 119..125,
                                                        },
                                                    ),
                                                ),
                                                name: None,
                                            },
                                            equal_greater_than: EqualGreaterThan {
                                                range: 126..128,
                                            },
                                            value_type: MappingValueStruct {
                                                type_name: ElementaryType(
                                                    BytesKeyword(
                                                        BytesKeyword {
                                                            range: 129..136,
                                                        },
                                                    ),
                                                ),
                                                name: Some(
                                                    Identifier {
                                                        range: 137..140,
                                                    },
                                                ),
                                            },
                                            close_paren: CloseParen {
                                                range: 140..141,
                                            },
                                        },
                                    ),
                                    attributes: StateVariableAttributes {
                                        elements: [],
                                    },
                                    name: Identifier {
                                        range: 149..150,
                                    },
                                    value: None,
                                    semicolon: Semicolon {
                                        range: 150..151,
                                    },
                                },
                            ),
                        ],
                    },
                    close_brace: CloseBrace {
                        range: 152..153,
                    },
                },
            ),
        ],
    },
}
